objects/ProductItem.object
<CustomObject>
    <fields>
        <fullName>Auto_Reorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, any consumed parts will be reordered automatically and a technician will have to receipt items.</inlineHelpText>
        <label>Auto Reorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product2.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Created for related list view</description>
        <formula>Product2.Description</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Text__c</fullName>
        <description>Used to avoid selection off Product Name in Lightning view</description>
        <formula>Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ProductItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Item</label>
    </listViews>
    <listViews>
        <fullName>All_ProductItems</fullName>
        <columns>Name</columns>
        <columns>Product2</columns>
        <columns>Location</columns>
        <columns>QuantityOnHand</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Item</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Item</label>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Item</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Unit_Measures_must_be_same_as_product</fullName>
        <active>false</active>
        <description>Unit measures need to be same as product as this will cause product transfer errors if there is a mismatch</description>
        <errorConditionFormula>TEXT(QuantityUnitOfMeasure) != TEXT( Product2.QuantityUnitOfMeasure )</errorConditionFormula>
        <errorDisplayField>QuantityUnitOfMeasure</errorDisplayField>
        <errorMessage>Unit of measure must match with the Product unit of measure</errorMessage>
    </validationRules>
</CustomObject>